I added code to make my design responsive and accessible on smaller mobile devices. I did this by using media query and simple CSS. I also added a footer on all the  pages and improved the design of my home page, I am very happy with how it turned out.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -534,7 +534,85 @@
         }
     }
 
+    @@media only screen and (min-Width: 800px) {
+
+        map-section {
+            
+          
+
     
+        margin-left: 3%;
+        margin-top: 4%;
+       
+     
+    
+        }
+
+        .items {
+            margin-left: 5%;
+            display: flex;
+            justify-content: space-around;
+        }
+        #Heading {
+            padding-top: 2.5%;
+            width: 101%;
+            height: 45vh;
+            background-color: #0d0f11;
+            color: black;
+            width: 101%;
+            margin: -2%;
+            margin-left: -1%;
+            overflow: hidden;
+        }
+
+        .about-logo {
+            margin-left: 5%;
+            margin-right: 20px;
+            width: 30%;
+            height: 40vh;
+        }
+    }
+
+
+    .container {
+        padding: 0;
+        max-width: 100%;
+    }
+
+    .Introduction {
+        margin-top: 4%;
+        font-size: 1.6rem;
+        text-align: Center;
+        margin: auto;
+        color: white;
+        color: black;
+    }
+
+
+
+    .ShopNow {
+        color: white;
+        background-color: #7da2c5;
+        font-size: 19px;
+        border: 1px solid #2d63c8;
+        border-radius: 28px;
+        height: 5vh;
+    }
+
+        .ShopNow:hover {
+            color: #235b73;
+            background-color: lightgreen;
+        }
+
+    #MainTitle {
+        margin-top: 10%;
+        font-size: 6rem;
+        text-align: Center;
+        margin: auto;
+        color: white;
+    }
+
 </style>
+
 
 
