--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -5,32 +5,201 @@
 }
 
 
+@{
 
-
-
-    
-    
-    
-
-
-    <!--If Cart is full display cart full and hide add to cart buttons-->
-   @if (ViewBag.MaxQuantiy == true)
+    //display the following html content if the viewbag display PopUp equals ture
+    if (ViewBag.displaySizePicker == true)
     {
-        <h1>Your Cart Is Full</h1>
+        <a style="margin-right:50%" asp-action="Index">Go back</a>
+
+        <div class="centeredPopUP" style="margin-top:5%">
+
+            <div style="background-color:white; border-radius:28px; width:39%; margin:auto; padding:1%;" class="Item">
+
+
+                <img class="ItemImgage" src=" @ViewBag.Item.ImageURL" />
+
+
+
+                <h5>  @ViewBag.Item.Name </h5>
+
+                <h5> @ViewBag.Item.Price </h5>
+
+
+            </div>
+            <!--Display the Item Name from the View Bag-->
+            <!--Display the Item Price from the View Bag-->
+
+            <div>
+                <h1>Please Pick A size</h1>
+
+
+                <form asp-controller="OrderItems" asp-action="AddToCart">
+
+                    <input name="itemId" type="hidden" value="@ViewBag.Item.ItemId" />
+
+                    <div>
+
+                        <input type="submit" value="S" name="size" />
+                        <input type="submit" value="M" name="size" />
+                        <input type="submit" value="L" name="size" />
+                    </div>
+
+                </form>
+
+
+            </div>
+        </div>
+
         <style>
-            .AddToCart {
+
+            .centeredPopUP {
+                z-index: 1000;
+                position: absolute;
+                top: 5%;
+                left: 20%;
+                right: 20%;
+                width: 60%;
+                margin: auto;
+                padding: 20px;
+                text-align: center;
+                background-color: aliceblue;
+                border: 2px solid black;
+                border-radius: 10px;
+                font-size: 24px;
+                color: black;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+
+
+                .centeredPopUP input[type ="submit"] {
+                    background-color: black;
+                    color: #fff;
+                    padding: 10px 20px;
+                    border: none;
+                    border-radius: 5px;
+                    font-size: 18px;
+                    margin-top: 20px;
+                }
+
+            .AddToCart, .FilterButtons {
                 display: none;
             }
+
+            .ItemsPage {
+                opacity: 5%
+            }
+
+        </style>
+
+
+
+
+
+
+    }
+
+}
+
+
+
+@{
+    //display the following html content if the viewbag display PopUp equals ture
+    if (ViewBag.displayPopUp == true)
+    {
+
+
+        <div style="margin-top:5%" class="centeredPopUP">
+            <h1>Your Item as been added to cart</h1>
+
+            @ViewBag.Item.Name  <!--Display the Item Name from the View Bag-->
+            @ViewBag.Item.Price <!--Display the Item Price from the View Bag-->
+            <!--two forms with buttons, one to go back to index the other to redrict to the open cart action-->
+            <form asp-action="Index">
+                <input type="submit" class="continue-shopping-btn active" value="Continue Shopping " />
+            </form>
+            <form asp-action="OpenCart" asp-controller="OrderItems">
+                <input type="submit" value="Go to Cart" class="add-to-cart-btn" />
+            </form>
+
+
+        </div>
+        <!--While pop up is displayed blur backgorund and hide add to cart buttons-->
+        <style>
+
+            .centeredPopUP {
+                z-index: 1000;
+                position: absolute;
+                top: 5%;
+                left: 20%;
+                right: 20%;
+                width: 60%;
+                margin: auto;
+                padding: 20px;
+                text-align: center;
+                background-color: aliceblue;
+                border: 2px solid black;
+                border-radius: 10px;
+                font-size: 24px;
+                color: black;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+
+            .ItemsPage {
+                opacity: 5%
+            }
+
+            .centeredPopUP input[type ="submit"] {
+                background-color: black;
+                color: #fff;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                font-size: 18px;
+                margin-top: 20px;
+            }
+
+            .AddToCart, .FilterButtons {
+                display: none;
+            }
+
         </style>
     }
-   
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--If Cart is full display cart full and hide add to cart buttons-->
+@if (ViewBag.MaxQuantiy == true)
+{
+    <h1>Your Cart Is Full</h1>
+    <style>
+        .AddToCart {
+            display: none;
+        }
+    </style>
+}
+
 
 
 
 
 <div class="ItemsPage">
-    <h1>Avcol's Range</></h1>
+    <br />
+    <h1><b>Avcol's Range</b></></h1>
 
+    <br />
 
     <div>
         @if (User.IsInRole("Admin"))//If the user is admin display
@@ -76,8 +245,12 @@
                     <input type="submit" class="FilterButtons" name="Category" value="@Category.Name" />
                 }
             }
-            <!--Reaload's the home page-->
-            <a class="FilterButtons" asp-action="Index">See All</a>
+        </form>
+        <!--Reaload's the home page-->
+        <form>
+
+            <input class="FilterButtons" type="submit" asp-action="Index" value="See All" />
+
         </form>
 
     </div>
@@ -91,6 +264,21 @@
             {
                 <h1> Products Not Found</h1>
                 <a class="FilterButtons" asp-action="Index">See Products Here</a>
+
+                <style>
+                    .container {
+                        height: 100vh;
+                        !important;
+                    }
+                </style>
+            }
+            else
+            {
+                <style>
+                    .container {
+                        height: fit-content !important;
+                    }
+                </style>
             }
         }
 
@@ -123,7 +311,7 @@
                 {
 
 
-                    <form  asp-action="SizePicker">
+                    <form asp-action="SizePicker">
 
 
                         <input type="hidden" name="itemId" value="@item.ItemId" />
@@ -141,7 +329,7 @@
 
 
                     <a asp-action="Edit" asp-route-id="@item.ItemId">Edit</a>
-                   
+
                     <a asp-action="Delete" asp-route-id="@item.ItemId">Delete</a>
                 }
 
@@ -171,7 +359,7 @@
                 else
                 {
                     // Render a submit button for the pthers page with a different styling form the active page with the value of i.
-                    <input name="Page"  class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
+                    <input name="Page" class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
                 }
             }
 
@@ -182,9 +370,10 @@
 </div>
 
 <style>
-body{
+    body {
         background-color: #f9f9f9;
-}
+    }
+
     @@media only screen and (max-Width: 800px) {
         .ItemsPage {
             grid-template-columns: 32% 32%;
@@ -193,29 +382,31 @@ body{
             width: 96%;
             grid-row-gap: 0.8%;
         }
-         
+
 
         .ItemsBox {
             text-align: center;
             padding: 10px;
             width: 80%;
             height: 70%;
-         
             margin: auto;
         }
-        .Item{
+
+        .Item {
             margin-top: 2%;
+        }
+
+        ItemImgage {
+            width: 55%;
+            height: 65%
         }
     }
 
     @@media only screen and (min-Width: 800px) {
         .ItemsBox {
-
             grid-template-columns: 30% 30% 30%;
             margin-top: -32.5%;
             margin-left: 28%;
-
-          
         }
 
         ItemsPage {
@@ -244,7 +435,7 @@ body{
 
 
 
-  
+
 
 
     .ItemImgage {
@@ -259,7 +450,6 @@ body{
         }
 
     .FilterButtons {
-       
         text-decoration: none;
         color: black;
         font-size: 2rem;
@@ -267,7 +457,9 @@ body{
         background: none;
     }
 
-
+        .FilterButtons:hover {
+            color: teal;
+        }
 
     .AddToCart {
         font-size: 1rem;
@@ -290,7 +482,6 @@ body{
         }
 
 </style>
-
 
 
 
