--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -69,9 +69,18 @@
                 font-size: 24px;
                 color: black;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
             }
 
-
+           .ItemImgage{
+               overflow:hidden;
+               height:7vh;
+           }
+           body{
+               overflow:hidden;
+               margin-bottom: 0%;
+               padding-bottom: 0%;
+           }
                 .centeredPopUP input[type ="submit"] {
                     background-color: black;
                     color: #fff;
@@ -82,12 +91,18 @@
                     margin-top: 20px;
                 }
 
-            .AddToCart, .FilterButtons {
+            .AddToCart, .FilterButtons, pagebuttons {
                 display: none;
             }
 
-            .ItemsPage {
-                opacity: 5%
+            .ItemsPage{
+                opacity: 5%;
+                overflow: hidden !important;
+                height: 80vh;
+            }
+            body{
+            
+                height: 100vh;
             }
 
         </style>
@@ -126,7 +141,7 @@
         </div>
         <!--While pop up is displayed blur backgorund and hide add to cart buttons-->
         <style>
-
+           
             .centeredPopUP {
                 z-index: 1000;
                 position: absolute;
@@ -145,8 +160,16 @@
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             }
 
-            .ItemsPage {
-                opacity: 5%
+           .ItemsPage {
+                opacity: 5%;
+                height: 75vh;
+                overflow: hidden !important;
+            }
+
+            body {
+              
+                height: 100vh;
+                overflow: hidden
             }
 
             .centeredPopUP input[type ="submit"] {
@@ -159,7 +182,7 @@
                 margin-top: 20px;
             }
 
-            .AddToCart, .FilterButtons {
+            .AddToCart, .FilterButtons, .pagebuttons {
                 display: none;
             }
 
@@ -352,14 +375,14 @@
                 @if (i == ViewBag.PageNUmber)
                 {
                     // render a input submit button for the current page with value of i.
-                    <input name="Page" value="@i" type="submit" style="background-color: black; color:white; text-align:center; padding: 5px 10px; border: none; border-radius: 3px; width:50%; margin:3%; text-align:center;" />
+                    <input class="pagebuttons"name="Page" value="@i" type="submit" style="background-color: black; color:white; text-align:center; padding: 5px 10px; border: none; border-radius: 3px; width:50%; margin:3%; text-align:center;" />
 
 
                 }
                 else
                 {
                     // Render a submit button for the pthers page with a different styling form the active page with the value of i.
-                    <input name="Page" class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
+                    <input name="Page" class="pagebuttons" class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
                 }
             }
 
