--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -1,10 +1,24 @@
-﻿
+﻿<form asp-action="SubmitId">
+    < <h2>Please Upload Student Id</h2>
+    <label>File</label>
+
+
+    <input type="file" name="IdFile" class="form-control" name="file" required />
+    <span></span>
+    <br />
+    <br />
+
+    <input type="submit" class="btn btn-default" value="Upload Image" name="submit" />
+
+
+</form>
+
+
+
 
 
 <!--This forms gahter infromation about the cusomter and thier gift. It passes the details to the ProcessOrder method in the OrderItems Controller-->
 <form class="CheckoutForm" asp-controller="OrderItems" asp-action="ProcessOrder">
-
-
 
 
 
@@ -13,8 +27,7 @@
          Checkout
 
         </h1>
-
-   
+     
 
             <!--Hidden Input pass OrderId to controller-->
             <input name="orderId" value="@ViewBag.OrderId" type="hidden" />
