--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -1,4 +1,5 @@
-﻿<form asp-action="SubmitId">
+﻿<form asp-action="SubmitId" enctype="multipart/form-data">
+    
     < <h2>Please Upload Student Id</h2>
     <label>File</label>
 
@@ -12,6 +13,7 @@
 
 
 </form>
+
 
 
 
