Added Order Status bar using razzor syntax parring it wiht some css.

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -14,7 +14,8 @@
 
         <div class="centeredPopUP" style="margin-top:5%">
 
-            <div style="background-color:white; border-radius:28px; width:39%; margin:auto; padding:1%;" class="Item">
+            <div style="     background-color: #e0f2f1;
+     border-radius:28px; width:39%; margin:auto; padding:1%;" class="Item">
 
 
                 <img class="ItemImgage" src=" @ViewBag.Item.ImageURL" />
@@ -63,7 +64,7 @@
                 margin: auto;
                 padding: 20px;
                 text-align: center;
-                background-color: aliceblue;
+                background-color: #e0f2f1;
                 border: 2px solid black;
                 border-radius: 10px;
                 font-size: 24px;
@@ -152,7 +153,8 @@
                 margin: auto;
                 padding: 20px;
                 text-align: center;
-                background-color: aliceblue;
+              background-color: #e0f2f1;
+                
                 border: 2px solid black;
                 border-radius: 10px;
                 font-size: 24px;
