--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -26,12 +26,12 @@
 
 
 
-    @using (Html.BeginForm("submit", "Orders", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("submitId", "Orders", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="form-group2">
             <h2>Please Upload Student Id</h2>
             <label>File</label>
-            <input type="file" class="form-control" name="file" required />
+            <input type="file" class="form-control" name="Idfile" required />
             <span></span>
             <br />
             <br />
