--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -111,17 +111,16 @@
 
         <input type="text" name="Phone" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" title="eg 0226565505 " required />
 
-        <input vlaue="Go to Payment" type="submit"/>
+        <input vlaue="Go to Payment" type="submit" />
     </form>
 
 
-</div>
 
 
 
 
 
-    <<!--CSS CODE-->
+    <!--CSS CODE-->
 <style>
 
     .CheckoutForm {
