--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -83,6 +83,10 @@
                                 .nav-link text-light {
                                     color: white;
                                 }
+                                .navbar-toggler{
+                                    backgorund-colour: white;
+                                    colour: whtie;
+                                }
 
                                 .SearchTerm {
                                     border-radius: 20px;
