Add cart icon to nav bar.                                   Fixed user detials section and checkout form,

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -24,7 +24,7 @@
 
                 <h5>  @ViewBag.Item.Name </h5>
 
-                <h5> @ViewBag.Item.Price </h5>
+                <h5>$@ViewBag.Item.Price </h5>
 
 
             </div>
